[package]
name = "Class7-Q3"
version = "0.1.0"
authors = ["Muhammad Ashfaq <ashfaqaku@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_contrib = "0.4.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
dotenv = "0.14.1"
reqwest = "0.9.19"
rocket_cors = "0.5.0"
lazy_static = "1.4.0"

